# api/openapi.yaml
@@ -157,6 +157,32 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Error'
+  /api/v1/auth/me:
+    get:
+      tags: [auth]
+      summary: Get info of logged in user
+      operationId: userInfo
+      security:
+        - cookieAuth: []
+      responses:
+        '200':
+          description: Successfully got user info
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/UserInfoResponse'
+        '401':
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        '500':
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
   /api/v1/user/query:
     post:
       tags: [user]
@@ -417,6 +443,14 @@ components:
           type: string
           format: date-time
       required: [id, query, searchDate]
+    UserInfoResponse:
+      type: object
+      properties:
+        username:
+          type: string
+        email:
+          type: string
+      required: [username, email]
 
     Error:
       type: object
