# internal/api/v1/oas_router_gen.go
@@ -92,6 +92,26 @@ func (s *Server) ServeHTTP(w http.ResponseWriter, r *http.Request) {
 						return
 					}
 
+				case 'm': // Prefix: "me"
+
+					if l := len("me"); len(elem) >= l && elem[0:l] == "me" {
+						elem = elem[l:]
+					} else {
+						break
+					}
+
+					if len(elem) == 0 {
+						// Leaf node.
+						switch r.Method {
+						case "GET":
+							s.handleUserInfoRequest([0]string{}, elemIsEscaped, w, r)
+						default:
+							s.notAllowed(w, r, "GET")
+						}
+
+						return
+					}
+
 				case 'v': // Prefix: "vk/"
 
 					if l := len("vk/"); len(elem) >= l && elem[0:l] == "vk/" {
@@ -314,6 +334,30 @@ func (s *Server) FindPath(method string, u *url.URL) (r Route, _ bool) {
 							r.summary = "Logout user"
 							r.operationID = "logoutUser"
 							r.pathPattern = "/api/v1/auth/logout"
+							r.args = args
+							r.count = 0
+							return r, true
+						default:
+							return
+						}
+					}
+
+				case 'm': // Prefix: "me"
+
+					if l := len("me"); len(elem) >= l && elem[0:l] == "me" {
+						elem = elem[l:]
+					} else {
+						break
+					}
+
+					if len(elem) == 0 {
+						// Leaf node.
+						switch method {
+						case "GET":
+							r.name = UserInfoOperation
+							r.summary = "Get info of logged in user"
+							r.operationID = "userInfo"
+							r.pathPattern = "/api/v1/auth/me"
 							r.args = args
 							r.count = 0
 							return r, true
